# helixoneapp

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTION_IMMEDIATE.md  ADVANCED_CHARTS_DOCUMENTATION.md  ADVANCED_CHARTS_IMPLEMENTATION.md  ANALYSE_AUTOMATIQUE_COMPLETE.md  ANALYSE_COMPLETE_RECHERCHE.md  ANALYSE_FORMATION.md  ANIMATIONS_IMPLEMENTATION.md  API_KEYS_SETUP.md  CHARTS_READY_TO_TEST.md  CONTRIBUTING.md  CORRECTIONS_GRAPHIQUES.md  DATA_COLLECTION_GUIDE.md  DATA_SOURCES_INVENTORY.md  DATA_SOURCES_MASTER_PLAN.md  DEMARRAGE_SIMPLE.md  DONNEES_MANQUANTES.md  DONNEES_MANQUANTES_RESUME.txt  ERREURS_CORRIGEES.md  FRONTEND_ALERTS_COMPONENT.md  GUIDE_REDDIT_API.md  HelixOne.spec  HelixOne_Windows.spec  IBKR_INTEGRATION_GUIDE.md  INTEGRATION_ML_GUIDE.md  INVESTOR_PITCH.md  LANCER_APP.md  LANCER_HELIXONE.command  LANCER_MAINTENANT.md  MENU_HAMBURGER_DOC.md  ML_ANALYSIS_FIXED.md  NETTOYAGE_FICHIERS.md  NOUVEAU_MOTEUR_ML_README.md  NOUVELLES_SOURCES_RAPPORT.md  NOUVELLES_SOURCES_RESUME.txt  NOUVELLE_FORMATION_V2.md  OBTENIR_CLES_API.md  PLAN_AMELIORATION_FORMATION.md  (+78 more)
.claude/: settings.local.json
archive/: SCENARIO_ENGINE_DESIGN.md  SCENARIO_ENGINE_IMPLEMENTATION.md  SCENARIO_ENGINE_QUICKSTART.md
assets/: logo.icns
data/: MSFT_historical.csv
formationcontenu/: formation2.0.md
helixone-backend/: .env.example  .gitignore  BIS_MIGRATION_NOTES.md  DATA_SOURCES_FINAL_SUMMARY.md  DATA_SOURCES_INTEGRATION_SUMMARY.md  DONNEES_MANQUANTES_ANALYSE.md  Dockerfile  GUIDE_CLES_API.md  NOUVELLES_SOURCES_PLAN.md  NOUVELLES_SOURCES_RAPPORT_FINAL.md  OBTENIR_CLES_API_IEX_TWELVE.md  OBTENIR_CLE_TIINGO.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_FINAL.md  PHASE_5_SUMMARY.md  Procfile  RAPPORT_CORRECTIONS.md  RESUME_TESTS.md  SECURITY.md  SOURCES_CONFIGURATION_FINALE.md  SOURCES_INTEGRATION_STATUS.md  SOURCES_REPAIR_SUMMARY.md  STATUS_SOURCES_FINAL.md  alembic.ini  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_ml.txt  start_server.sh  test_all_sources.py  test_api_complet.py  test_apple_complete.py  test_binance.py  test_bis.py  test_carbon_intensity.py  test_coingecko.py  test_config.py  test_ecb.py  (+13 more)
installer/: HelixOne.iss
scripts/: build_windows.py
src/:  donnees_actions.py  alerte.py  analyseur_signaux.py  analytics.py  api_tracker.py  app.py  asset_path.py  auth_manager.py  auth_session.py  biometric_auth.py  config.json.backup  config.py  main.py  (+12 more)
(+374 files in other folders)
